object/output.txt
object$ g++ complex.cpp 
complex.cpp: In function ‘void test()’:
complex.cpp:26:9: error: reference to ‘negate’ is ambiguous
   26 |   print(negate(b));
      |         ^~~~~~
In file included from /usr/include/c++/9/string:48,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from complex.cpp:1:
/usr/include/c++/9/bits/stl_function.h:162:12: note: candidates are: ‘template<class _Tp> struct std::negate’
  162 |     struct negate;
      |            ^~~~~~
complex.cpp:11:12: note:                 ‘complexCls negate(complexCls)’
   11 | complexCls negate(complexCls);
      |            ^~~~~~
object$ 
